Remove layer-picker title and prevent wrap on hide checkbox
BUG=226
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10010048

--- a/src/cc/layer_viewer.css
+++ b/src/cc/layer_viewer.css
@@ -29,3 +29,7 @@ layer-viewer > layer-viewer-analysis {
   height: 150px;
   overflow-y: auto;
 }
+
+.labeled-checkbox {
+  white-space: nowrap;
+}
